# AES-analytical_engine

./: main.py  pyproject.toml
analytics_engine/: __init__.py  analytical_store.py  archival_job.py  forwarding_buffer_store.py  network_event_store.py  network_settings_store.py  redis_notifier.py  rs232_config_store.py  runtime.py  sensor_store.py  settings_store.py  system_metrics_store.py
analytics_engine/analytics/: continuity.py  rules.py  stats.py  trends.py
analytics_engine/comms/: __init__.py  https_client.py  https_forwarder.py  mqtt_client.py  mqtt_forwarder.py
analytics_engine/interfaces/: forwarding_config_store.py  modbus_tcp_config_store.py  rs232_config_store.py  rs485_config_store.py
utils/: led.py  redis_client.py
webpage/: __init__.py  app.py  routes.py
webpage/static/css/: app.css
webpage/static/js/: app.js  login.js
webpage/templates/: base.html  connectivity.html  dashboard.html  forwarding.html  insights.html  interfaces.html  login.html  logs.html  monitor.html  system.html
