[project]
name = "metacrust-edge-gateway-aes"
version = "0.1.0"
description = "Analytics Engine and web console for MetaCrust Edge Gateway"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "itsdangerous>=2.2,<3.0",
    "jinja2>=3.1,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
